# locomotor

./: AUTHORS  DevelopmentNotes.txt  README  evolverDB.pro  evolverRenderServer.pro
Analysis/: harnessGen.data  harnessGenANOVA.r  harnessGenEval.py
else.xcodeproj/: project.pbxproj
elseViewer/: AnimController.h  AnimController.mm  AnimControllerImpl.cpp  AnimControllerImpl.hpp  AppDelegate.h  AppDelegate.mm  BasicOpenGLView.h  BasicOpenGLView.mm  GLCheck.h  GLCheck.mm  Info.plist  Performance.h  UrlPerformance.h  UrlPerformance.mm  UrlPerformanceImpl.h  UrlPerformanceImpl.m  drawInfo.h  drawInfo.mm  elseViewer_Prefix.pch  (+1 more)
src/: AcrobotArticulatedBody.cpp  AcrobotArticulatedBody.hpp  AcrobotFitnessFunc.cpp  AcrobotFitnessFunc.hpp  All.hpp  ArticulatedBody.cpp  ArticulatedBody.hpp  ArticulatedBodyFactory.cpp  ArticulatedBodyFactory.hpp  BalanceFitnessFunc.hpp  BodyState.cpp  BodyState.hpp  CollisionBox.hpp  ConstantFitnessFunc.hpp  Controller.cpp  Controller.hpp  ControllerFactory.cpp  ControllerFactory.hpp  DBExperiment.cpp  DBExperiment.h  DbPerformance.cpp  DbPerformance.hpp  Else.hpp  ElseCmd.cpp  ElseException.hpp  Evaluation.cpp  Evaluation.hpp  EvaluationFactory.cpp  EvaluationFactory.hpp  EvaluationFactoryDB.cpp  EvaluationFactoryDB.hpp  EvoReporter.hpp  Evolver.hpp  EvolverCmdLine.cpp  EvolverDB.cpp  EvolverRender.cpp  EvolverUI.cpp  EvolverUI.hpp  FileEvoReporter.cpp  FileEvoReporter.hpp  (+60 more)
src/neat/: Makefile.am  experiments.cpp  experiments.h  genetics.cpp  genetics.h  neat.cpp  neat.h  neatmain.cpp  neatmain.h  neatmain_ng.cpp  networks.cpp  networks.h
(+13 files in other folders)
